feat(player): add player sprite in game

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "core",
         "ui",
-        "centerFrame"
+        "centerFrame",
+        "player"
     ]
 }
